<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6FFBC02D"
    tools:context="com.wordle.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/check_1"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/check_1_guess"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/check_2"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/check_2_guess"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/check_3"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:text="@string/check_3_guess"
        android:textColor="#2E0202"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/guess"
        android:layout_width="144dp"
        android:layout_height="108dp"
        android:layout_marginEnd="16dp"
        android:background="#000000"
        android:text="@string/guess"
        android:textColor="#FFA000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:layout_marginTop="2dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="115dp"
        android:layout_height="66dp"
        android:text="@string/hide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="122dp"
        android:layout_height="72dp"
        android:layout_marginBottom="108dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/reset"
        android:textColor="#FFA000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <EditText
        android:id="@+id/input"
        android:layout_width="280dp"
        android:layout_height="102dp"
        android:layout_marginBottom="4dp"
        android:autofillHints="4 Letter Word"
        android:ems="10"
        android:hint="@string/enteryourguess"
        android:inputType="text"
        android:lines="1"
        android:maxLength="7"
        android:maxLines="1"
        android:textColorHighlight="#58CD5D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guess"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/congratButton"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginBottom="76dp"
        android:text="@string/nice"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>


